--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hangman</title>
-    <link rel="stylesheet" href="index.js">
+    <link href="/favicon.ico" type="image/x-icon" rel="icon" />
+ <script src="index.js"></script>
+    
 </head>
 <body>
     <div class="output1"></div>
     <div class="output2"></div>
-    <div class="messgae"></div>
+    <div class="message"></div>
     <button>Start</button>
 </body>
 </html>
