added dom content loaded to fix the issue where the button was not being selected properly

--- a/index.html
+++ b/index.html
@@ -1,17 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html>
+  <head>
     <title>Hangman</title>
-    <link href="/favicon.ico" type="image/x-icon" rel="icon" />
- <script src="index.js"></script>
-    
-</head>
-<body>
+    <style></style>
+   <script src="index.js"></script>
+  </head>
+
+  <body>
     <div class="output1"></div>
     <div class="output2"></div>
     <div class="message"></div>
     <button>Start</button>
-</body>
+  </body>
 </html>
