--- a/index.html
+++ b/index.html
@@ -1,14 +1,32 @@
-<html>
-  <head>
-    <title>Hangman</title>
-    <style></style>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style>
+        .letter{
+   display:inline-block;
+   padding:5px;
+   border: 1px solid #ddd;
+   border-radius:15px;
+   margin-left: 10px;
+   cursor: pointer;
+   font-size: 1.5em;
+}
+.letter2{
+    display:inline-block;
+    padding:5px;
+    margin-left: 10px;
+    font-size: 3m;
+}
+    </style>
    <script src="index.js"></script>
-  </head>
-
-  <body>
+</head>
+<body>
     <div class="output1"></div>
     <div class="output2"></div>
     <div class="message"></div>
     <button>Start</button>
-  </body>
+</body>
 </html>
