added event handler so letters cannot be clicked twice

--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
     margin-left: 10px;
     font-size: 3m;
 }
+.done{
+   cursor:default;
+   color:#ddd;
+   border:1px solid white; 
+}
     </style>
    <script src="index.js"></script>
 </head>
