styled the button

--- a/index.html
+++ b/index.html
@@ -25,6 +25,14 @@
    color:#ddd;
    border:1px solid white; 
 }
+button{
+    background-color: red;
+    width: 200px;
+    text-align: center;
+    padding: 20px;
+    font-size: 2em;
+    color:white
+}
     </style>
    <script src="index.js"></script>
 </head>
