styled the message

--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@ button{
     font-size: 2em;
     color:white
 }
+.message{
+    font-size: 2.5em;
+    margin-top: 20px;
+    font-family: fantasy;
+
+}
     </style>
    <script src="index.js"></script>
 </head>
