changed functions to fat arrow functions

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Hangmen</title>
     <style>
         .letter{
    display:inline-block;
@@ -36,7 +36,7 @@ button{
 .message{
     font-size: 2.5em;
     margin-top: 20px;
-    font-family: fantasy;
+    font-family: cursive;
 
 }
     </style>
