--- a/index.html
+++ b/index.html
@@ -4,42 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hangmen</title>
-    <style>
-        .letter{
-   display:inline-block;
-   padding:5px;
-   border: 1px solid #ddd;
-   border-radius:15px;
-   margin-left: 10px;
-   cursor: pointer;
-   font-size: 1.5em;
-}
-.letter2{
-    display:inline-block;
-    padding:5px;
-    margin-left: 10px;
-    font-size: 3m;
-}
-.done{
-   cursor:default;
-   color:#ddd;
-   border:1px solid white; 
-}
-button{
-    background-color: red;
-    width: 200px;
-    text-align: center;
-    padding: 20px;
-    font-size: 2em;
-    color:white
-}
-.message{
-    font-size: 2.5em;
-    margin-top: 20px;
-    font-family: cursive;
-
-}
-    </style>
+    <link rel="stylesheet" href="style.css">
+    
    <script src="index.js"></script>
 </head>
 <body>
